# claude-statusline

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh
src/: config.rs  error.rs  input.rs  lib.rs  main.rs  output.rs  segment.rs  theme.rs
src/segments/: cost.rs  duration.rs  git.rs  mod.rs  model.rs  tokens.rs
