[package]
name = "claude-statusline"
version = "0.1.0"
edition = "2021" # Stable Version
authors = ["Brian Huang"]
description = "High-performance statusline renderer for Claude Code"
license = "MIT"

[lib]
name = "statusline"
path = "src/lib.rs"

[[bin]]
name = "claude-statusline"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1